[fix] change title text to support TH

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai+Looped:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 <body>
     <!-- Title & Cover -->
     <div class="change-language-container">
@@ -22,7 +22,7 @@
         <img id="banner" src="images/banner_en.png" alt="Bitcoin Odyssey" class="banner">
     </div>
     <!-- Timeline -->
-    <h3 class="website-description">History of Bitcoin</h3>
+    <h3 class="website-description" id="timeline-title"></h3>
     <div class="timeline" id="timeline"></div>
     <script src="script.js"></script>
     <!-- Footer -->
